# panda-win

./: .gitignore  0_T_ee_desired.ini  CMakeLists.txt  README.md  panda.ttt
include/aProxy/: CoppeliaOutLoop.hpp  ExtSystemProxy.hpp  FrankaProxy.hpp  RobotProxy.hpp  VREPProxy.hpp
include/bController/: Controller.hpp  Task.hpp
include/cEntity/: PANDARobot.hpp  RobotInterface.hpp
include/eUtils/: Timer.hpp  utils.hpp
libs/: README.md  buildLibfranka.md
libs/FrankaPandaDynModelLib/: FrankaPandaDynModelLib_dll.sln  FrankaPandaDynModelLib_dll.vcxproj  FrankaPandaDynModelLib_dll.vcxproj.filters  franka_model.hpp
libs/FrankaPandaDynModelLib/x64/Debug/: FrankaPandaDynModelLib_dll.dll.recipe  FrankaPandaDynModelLib_dll.exp  FrankaPandaDynModelLib_dll.ilk  FrankaPandaDynModelLib_dll.lib  FrankaPandaDynModelLib_dll.vcxproj.FileListAbsolute.txt  vc142.idb
libs/FrankaPandaDynModelLib/x64/Debug/FrankaPa.bf379e28.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FrankaPandaDynModelLib_dll.lastbuildstate  FrankaPandaDynModelLib_dll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/FrankaPandaDynModelLib/x64/Release/: FrankaPandaDynModelLib_dll.exp  FrankaPandaDynModelLib_dll.ipdb  FrankaPandaDynModelLib_dll.lib
libs/FrankaPandaDynModelLib/x64/Release/FrankaPa.bf379e28.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  FrankaPandaDynModelLib_dll.lastbuildstate  FrankaPandaDynModelLib_dll.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
libs/libfranka/: CMakeLists.txt
libs/libfranka/include/franka/: control_types.h
src/: main.cpp
src/aProxy/: CoppeliaOutLoop.cpp  FrankaProxy.cpp  VREPProxy.cpp
src/bController/: Controller.cpp  Task.cpp
src/cEntity/: PANDARobot.cpp  RobotInterface.cpp
src/eUtils/: Timer.cpp  examples_common.cpp  utils.cpp
